tests/ui/impl_unknown_type.stderr
Error [E0301]: `impl Missing` names a type that doesn't exist
  --> tests/ui/impl_unknown_type.jet:1:6
    |
  1 | impl Missing {
    |      ^^^^^^^
 Why: `Missing` hasn't been defined as a struct or enum
 Fix: define `struct Missing` or `enum Missing` first
